# sgx-cpu-feature-detection

./: LICENSE  Makefile.am  README.md  autogen.sh  configure.ac
build-aux/: sgx_app.am  sgx_enclave.am  sgx_tlib.am
m4/: sgx_config_openenclave.m4  sgx_config_sgxsdk.m4  sgx_init.m4  sgx_tstdc_check.m4  sgx_tstdc_check_prefix.m4
sample/: Makefile.am  featureid.c  featureid.h
sample/EnclaveFeatureId/: EnclaveFeatureId.c  EnclaveFeatureId.config.xml  EnclaveFeatureId.edl.in  EnclaveFeatureId_private.pem  Makefile.am
src/: Makefile.am  cpuid_merge.c  gen_featureid  ops.json  sgx_tcpu_features.h
